# slabvacuum

./: README.md  pyproject.toml
pilecrystal/: pile_generator.py
slabvacuum/: pile_generator.py
tests/: test_pile_generator.py
tests/models/: Mn2VGa.cif  layered.cif
